<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".ReportActivity">

    <!-- Location -->
    <androidx.cardview.widget.CardView
        android:id="@+id/locationCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location" />
    </androidx.cardview.widget.CardView>

    <!-- Station -->
    <androidx.cardview.widget.CardView
        android:id="@+id/stationCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/stationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/station" />
    </androidx.cardview.widget.CardView>

    <!-- Description -->
    <androidx.cardview.widget.CardView
        android:id="@+id/descriptionCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image" />

    <Button
        android:id="@+id/videoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_video" />

    <!-- Use a LinearLayout to organize the Image and Video views horizontally -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/backButton"
        android:layout_marginTop="16dp" />

</LinearLayout>
