<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context=".CreateUpdatesActivity">

    <!-- Information -->
    <androidx.cardview.widget.CardView
        android:id="@+id/informationCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/informationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/information" />
    </androidx.cardview.widget.CardView>

    <!-- Station -->
    <androidx.cardview.widget.CardView
        android:id="@+id/stationCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/stationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/station" />
    </androidx.cardview.widget.CardView>

      <!--    <Button-->
    <!--        android:id="@+id/imageButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Add Image" />-->

    <!--    <Button-->
    <!--        android:id="@+id/videoButton"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="Add Video" />-->

    <!--    <ImageView-->
    <!--        android:id="@+id/imageView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:srcCompat="@drawable/user_icon"-->
    <!--        android:visibility="gone" />-->

    <!--    <VideoView-->
    <!--        android:id="@+id/videoView"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:visibility="gone" />-->

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/back"
        android:id="@+id/backButton"
        android:layout_marginTop="16dp"
        />

</LinearLayout>
